<resources>
    <string name="app_name">Store</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash_board_name">فروشگاه</string>
    <string name="menu_profile">پروفایل</string>
    <string name="menu_search">جستجو</string>
    <string name="menu_list">دسته ها</string>
    <string name="menu_dashboard">خانه</string>
    <string name="profile_text">صفحه پروفایل</string>
    <string name="search">جستجو</string>
    <string name="list">لیست</string>
    <string name="home_text">خانه</string>
    <string name="category_item_more">بیشتر</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="back">بازگشت</string>
    <string name="cart_activity_title">سبد خرید</string>
    <string name="btn_next_step">مرحله بعد</string>
    <string name="tv_order">ثبت سفارش</string>
    <string name="btn_order">ثبت سفارش</string>
    <string name="tv_order_items_title">محصولات</string>
    <string name="cart_address">آدرس</string>
    <string name="address_hint">آدرس شرکت</string>
    <string name="description">توضیحات</string>
    <string name="description_hint">توضیحات (در صورت نیاز)</string>
    <string name="further_description">توجه داشته باشید که کالا در زمانی که به شما اعلام خواهد شد در آدرسی که در بالا وارد کردید تحویل داده می شود</string>
    <string name="code">کد رهگیری: 892132</string>
    <string name="followup">پیگیری سفارشات</string>
    <string name="return_to_homepage">بازگشت به صفحه اول</string>
    <string name="congratulation"> تبریک میگم!\n سفارش شما با موفقیت ثبت شد </string>
    <string name="download">ذخیره</string>
    <string name="share">اشتراک</string>
    <string name="order_accepted">سفارش ثبت شد</string>
    <string name="price">قیمت</string>
    <string name="discount_price">قیمت با تخفیف</string>
    <string name="characteristics">مشخصات</string>
    <string name="color">رنگ</string>
    <string name="size">سایز</string>
    <string name="add_to_cart">افزودن به سبد خرید +</string>
    <string name="search_phrase">جستجو میان کالاها</string>
    <string name="tv_exit">خروج</string>
    <string name="edit_information">ویرایش اطلاعات</string>
    <string name="buying_history">سوابق خرید</string>
    <string name="addresses">آدرس ها</string>
    <string name="agreement">توافق نامه</string>
    <string name="support">پشتیبانی</string>
    <string name="profile_mock_name">وحید صفری</string>
    <string name="profile_mock_phone">09154753364</string>
    <string name="agreement_dialog_text">تمام کالاهای این فروشگاه دارای ضمانت ۷ روزه برگشت می باشد</string>
    <string name="agreed">بازگشت</string>
    <string name="unit">ت</string>
    <string name="not_found">محصول موردنظر یافت نشد :(</string>
    <string name="delivered">تحویل داده شده</string>
</resources>
