<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_profile"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/menu_profile"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fragment_search"
        android:enabled="true"
        android:icon="@drawable/search_small"
        android:title="@string/menu_search"
        android:visible="true"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/empty"
        android:title=""
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/fragment_list"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/menu_list"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fragment_dashboard"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/menu_dashboard"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>