<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.dashboard.ui.OrderSuccessActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetEnd="@dimen/_8sdp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_order_success_back_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:scaleType="fitEnd"
                        android:src="@drawable/back_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_back"
                        style="@style/backTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/back"
                        app:layout_constraintBottom_toBottomOf="@id/iv_back_button"
                        app:layout_constraintStart_toEndOf="@id/iv_back_button"
                        app:layout_constraintTop_toTopOf="@id/iv_back_button" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_order_title"
                    android:textAppearance="@style/TitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/order_accepted"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="@dimen/_16ssp"
        android:layout_marginBottom="?attr/actionBarSize">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_congratulation"
            style="@style/CongratulationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16ssp"
            android:gravity="center"
            android:text="@string/congratulation"
            app:layout_constraintBottom_toTopOf="@+id/tv_order_items_title"
            app:layout_constraintEnd_toEndOf="@id/glr"
            app:layout_constraintStart_toStartOf="@id/gll" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_items_title"
            android:textAppearance="@style/TitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/code"
            app:layout_constraintBottom_toTopOf="@+id/btn_followup"
            app:layout_constraintEnd_toEndOf="@id/glr"

            app:layout_constraintStart_toStartOf="@id/gll" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_followup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/followup"
            android:theme="@style/CyanButtonThemeOverlay"
            app:cornerRadius="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/glr"
            app:layout_constraintStart_toStartOf="@id/gll"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_to_homepage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/return_to_homepage"
            android:theme="@style/PurpleBlueButtonThemeOverlay"
            app:cornerRadius="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/glr"
            app:layout_constraintStart_toStartOf="@id/gll"
            app:layout_constraintTop_toBottomOf="@id/btn_followup" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_download"
            style="@style/hintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_download"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/gll"
            app:layout_constraintStart_toStartOf="@id/gll" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_download"
            android:layout_width="@dimen/_15ssp"
            android:layout_height="@dimen/_15ssp"
            android:scaleType="fitCenter"
            android:src="@drawable/donwload"
            android:layout_marginStart="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_download"
            app:layout_constraintEnd_toStartOf="@+id/tv_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/tv_download"
            app:layout_constraintTop_toTopOf="@id/tv_download"
            android:layout_marginEnd="@dimen/_12sdp"
            app:tint="@color/mediumGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_share"
            style="@style/hintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="@id/tv_download"
            app:layout_constraintEnd_toStartOf="@id/iv_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/iv_download"
            app:layout_constraintTop_toTopOf="@id/tv_download" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/_15ssp"
            android:layout_height="@dimen/_15ssp"
            android:src="@drawable/share"
            android:tint="@color/mediumGray"
            android:layout_marginStart="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_download"
            app:layout_constraintEnd_toEndOf="@id/glr"
            app:layout_constraintEnd_toStartOf="@id/glr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/tv_share"
            app:layout_constraintTop_toTopOf="@id/tv_download" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>