<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.dashboard.ui.ItemSpecificationActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item_specification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/midGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.47" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_specification_title"
            style="@style/CategoryTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/midGuideline"
            tools:text="کفش مناسب" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_specification_price"
            style="@style/PriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_specification_title"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/CongratulationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_specification_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_specification_price"
            tools:text="تا 160000 140000" />


        <View
            android:id="@+id/line_between_price_and_discount_price"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@id/tv_item_specification_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_specification_discount_price"
            style="@style/PriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/discount_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_between_price_and_discount_price"
            android:layout_marginTop="@dimen/_8sdp"/>

        <View
            android:id="@+id/line_between_price_and_characteristics"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@id/tv_item_specification_discount_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/CongratulationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_specification_discount_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_specification_discount_price"
            tools:text="تا 160000 140000" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_specification_characteristics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line_between_price_and_characteristics"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/characteristics"
            style="@style/TitleTextView"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_specification_color"
            style="@style/PriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_specification_characteristics"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/CongratulationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_specification_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_specification_color"
            tools:text="نارنجی | آبی | مشکی" />


        <View
            android:id="@+id/line_between_color_and_size"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@id/tv_item_specification_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_specification_size"
            style="@style/PriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_between_color_and_size"
            android:layout_marginTop="@dimen/_8sdp"/>

        <View
            android:id="@+id/line_between_size_and_button"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@id/tv_item_specification_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/CongratulationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_specification_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_specification_size"
            tools:text="تا 42 38" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/GreenButtonThemeOverlay"
            android:gravity="center"
            android:text="@string/btn_next_step"
            android:insetRight="0dp"
            android:insetLeft="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>